Исправить ошибки, чтобы пройти тесты postman.