@@ -2,6 +2,8 @@ package ru.practicum.shareit.item;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.*;
 import ru.practicum.shareit.exception.ValidationException;
@@ -9,7 +11,7 @@ import ru.practicum.shareit.item.dto.CommentDto;
 import ru.practicum.shareit.item.dto.ItemDto;
 
 import javax.validation.constraints.NotNull;
-import java.util.List;
+import java.util.Collections;
 
 @Controller
 @RequestMapping("/items")
@@ -52,7 +54,7 @@ public class ItemController {
                                        @RequestParam(defaultValue = "10") int size) {
         if (text.isBlank()) {
             log.info("Пустой поисковый запрос.");
-            return List.of();
+            return new ResponseEntity<Object>(Collections.emptyList(), HttpStatus.OK);
         }
         checkPageBorders(from, size);
         return itemClient.searchAvailableItems(text, from, size);
